// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`KubeStatusIndicator snapshots renders error 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-start;
}

.c2 {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.c6 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 800;
  text-transform: none;
  font-style: normal;
  color: #BC3B1D;
}

.c4 svg {
  fill: #BC3B1D;
  height: 16px;
  width: 16px;
}

.c4 svg path.path-fill,
.c4 svg line.path-fill,
.c4 svg polygon.path-fill,
.c4 svg rect.path-fill,
.c4 svg circle.path-fill,
.c4 svg polyline.path-fill {
  fill: #BC3B1D!important;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c4 svg path.stroke-fill,
.c4 svg line.stroke-fill,
.c4 svg polygon.stroke-fill,
.c4 svg rect.stroke-fill,
.c4 svg circle.stroke-fill,
.c4 svg polyline.stroke-fill {
  stroke: #BC3B1D!important;
  transition: stroke 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c4 svg rect.rect-height {
  height: 16px;
  width: 16px;
}

.c4.downward {
  transform: rotate(180deg);
}

.c4.upward {
  transform: initial;
}

.c4 .c5 {
  margin-left: 4px;
  color: #BC3B1D;
}

.c4 img {
  width: 16px;
}

.c1 .c3 .c5 {
  color: #1a1a1a;
  font-weight: 400;
}

<div
    class="c0 c1 KubeStatusIndicator"
  >
    <div
      class="c2 c3 c4"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
        data-testid="ErrorIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-2h2zm0-4h-2V7h2z"
        />
      </svg>
      <span
        class="c5 c6"
      >
        Not Ready
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`KubeStatusIndicator snapshots renders success 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-start;
}

.c2 {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.c6 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 800;
  text-transform: none;
  font-style: normal;
  color: #27AE60;
}

.c4 svg {
  fill: #27AE60;
  height: 16px;
  width: 16px;
}

.c4 svg path.path-fill,
.c4 svg line.path-fill,
.c4 svg polygon.path-fill,
.c4 svg rect.path-fill,
.c4 svg circle.path-fill,
.c4 svg polyline.path-fill {
  fill: #27AE60!important;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c4 svg path.stroke-fill,
.c4 svg line.stroke-fill,
.c4 svg polygon.stroke-fill,
.c4 svg rect.stroke-fill,
.c4 svg circle.stroke-fill,
.c4 svg polyline.stroke-fill {
  stroke: #27AE60!important;
  transition: stroke 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c4 svg rect.rect-height {
  height: 16px;
  width: 16px;
}

.c4.downward {
  transform: rotate(180deg);
}

.c4.upward {
  transform: initial;
}

.c4 .c5 {
  margin-left: 4px;
  color: #27AE60;
}

.c4 img {
  width: 16px;
}

.c1 .c3 .c5 {
  color: #1a1a1a;
  font-weight: 400;
}

<div
    class="c0 c1 KubeStatusIndicator"
  >
    <div
      class="c2 c3 c4"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
        data-testid="CheckCircleIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"
        />
      </svg>
      <span
        class="c5 c6"
      >
        Applied revision: main/a3a54ef4a87f8963b14915639f032aa6ec1b8161
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`KubeStatusIndicator snapshots renders with noText prop 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-start;
}

.c1 {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.c2 svg {
  fill: #BC3B1D;
  height: 16px;
  width: 16px;
}

.c2 svg path.path-fill,
.c2 svg line.path-fill,
.c2 svg polygon.path-fill,
.c2 svg rect.path-fill,
.c2 svg circle.path-fill,
.c2 svg polyline.path-fill {
  fill: #BC3B1D!important;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c2 svg path.stroke-fill,
.c2 svg line.stroke-fill,
.c2 svg polygon.stroke-fill,
.c2 svg rect.stroke-fill,
.c2 svg circle.stroke-fill,
.c2 svg polyline.stroke-fill {
  stroke: #BC3B1D!important;
  transition: stroke 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c2 svg rect.rect-height {
  height: 16px;
  width: 16px;
}

.c2.downward {
  transform: rotate(180deg);
}

.c2.upward {
  transform: initial;
}

.c2 img {
  width: 16px;
}

<div
    class="c0 KubeStatusIndicator"
  >
    <div
      class="c1 c2"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
        data-testid="ErrorIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-2h2zm0-4h-2V7h2z"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;
